// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeletionModal disables deletion when user is not owner 1`] = `
<div
  class="modal-dialog"
  data-testid="commonModal"
>
  <div
    class="modal-content"
  >
    <div
      class="modal-header"
    >
      <div
        class="modal-title h4"
      >
        <span />
      </div>
      <button
        aria-label="Close"
        class="btn-close"
        type="button"
      />
    </div>
    <div
      class="modal-body"
    >
      testText
    </div>
    <div
      class="modal-footer"
    >
      <button
        class="btn btn-danger"
        disabled=""
        type="button"
      >
        testDeletionButton
      </button>
    </div>
  </div>
</div>
`;

exports[`DeletionModal renders correctly with deletionButtonI18nKey 1`] = `
<div
  class="modal-dialog"
  data-testid="commonModal"
>
  <div
    class="modal-content"
  >
    <div
      class="modal-header"
    >
      <div
        class="modal-title h4"
      >
        <span />
      </div>
      <button
        aria-label="Close"
        class="btn-close"
        type="button"
      />
    </div>
    <div
      class="modal-body"
    >
      testText
    </div>
    <div
      class="modal-footer"
    >
      <button
        class="btn btn-danger"
        type="button"
      >
        testDeletionButton
      </button>
    </div>
  </div>
</div>
`;
